--- a/src/app/products/page/components/product-card/product-card.component.html
+++ b/src/app/products/page/components/product-card/product-card.component.html
@@ -1,1 +1,18 @@
-<p>product-card works!</p>
+<div class="product__wrapper">
+  <div class="product__info">
+    <span class="product__created_at">
+      <fa-icon [icon]="faCalendar" class="icon"></fa-icon>
+      {{ product.createdAt | date }}
+    </span>
+    <span class="splitter">|</span>
+    <span class="product__views">
+      <fa-icon [icon]="faEye" class="icon"></fa-icon>
+      {{ product.views }}
+    </span>
+    <span class="product__remove_btn" (click)="remove()">
+      <fa-icon [icon]="faCircleXmark"></fa-icon>
+    </span>
+  </div>
+  <div class="product__title">{{ product.title }}</div>
+  <div class="product__description">{{ product.description }}</div>
+</div>
