feat(app): header with create product button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
+<header class="header">
+  <div class="settings">
+    <button mat-flat-button (click)="createDialog()">Create product</button>
+  </div>
+</header>
+
 <router-outlet />
